--- a/bird.conf
+++ b/bird.conf
@@ -154,8 +154,6 @@ template bgp bgp_ibgp {
 	              };
 }
 
-include "bird_ibgp.conf";
-
 # InterCity VPN peerings
 #########################
 
@@ -187,4 +185,11 @@ template bgp bgp_dn42 {
 	export all;
 };
 
-include "bird_aux.conf";
+# Include local configuration
+# '?' instead of 'f' avoids failures when these
+# files do not exist
+################################################
+
+include "bird_local.con?";
+include "bird_ibgp.con?";
+include "bird_icvpn.con?";
