--- a/bird6.conf
+++ b/bird6.conf
@@ -125,8 +125,6 @@ template bgp bgp_ibgp {
                 };
 }
 
-include "bird6_ibgp.conf";
-
 # InterCity VPN peerings
 #########################
 
@@ -159,4 +157,11 @@ template bgp bgp_dn42 {
   export where !is_default();
 }
 
-include "bird6_aux.conf";
+# Include local configuration
+# '?' instead of 'f' avoids failures when these
+# files do not exist
+################################################
+
+include "bird6_local.con?";
+include "bird6_ibgp.con?";
+include "bird6_icvpn.con?";
