--- a/burgtor/bird6_local.conf
+++ b/burgtor/bird6_local.conf
@@ -1,3 +1,21 @@
+# public BGP
+#############
+
+protocol bgp ffrhein_fra3 from bgp_public {
+	neighbor 2a03:2260:0:36::1 as 201701;
+}
+
+protocol bgp ffrhein_dus from bgp_public {
+	neighbor 2a03:2260:0:37::1 as 201701;
+}
+
+protocol bgp he from bgp_public {
+	neighbor 2001:470:12:8::1 as 6939;
+}
+
+# dn42
+#######
+
 protocol bgp bgp_dn42_chaos from bgp_dn42 {
 	source address fe80::ac16:fd8c;
 	neighbor fe80::ac16:fd8b%dn42_chaos as 64784;
