--- a/holstentor/bird_local.conf
+++ b/holstentor/bird_local.conf
@@ -1,3 +1,6 @@
+# public BGP
+#############
+
 protocol bgp ffrhein_ber from bgp_ffrhein {
         source address 100.64.0.165;
         neighbor 100.64.0.164 as 201701;
@@ -6,4 +9,15 @@ protocol bgp ffrhein_ber from bgp_ffrhein {
 protocol bgp ffrhein_fra3 from bgp_ffrhein {
         source address 100.64.0.167;
         neighbor 100.64.0.166 as 201701;
+}
+
+# dn42
+#######
+
+protocol bgp bgp_dn42_chaos from bgp_dn42 {
+        neighbor 172.22.253.145 as 64784;
+}
+
+protocol bgp bgp_dn42_nbsp_router from bgp_dn42 {
+        neighbor 10.130.0.43 as 76129;
 }
