--- a/burgtor/bird6_local.conf
+++ b/burgtor/bird6_local.conf
@@ -22,7 +22,7 @@ protocol bgp bgp_dn42_chaos from bgp_dn42 {
 }
 
 protocol bgp bgp_dn42_mneme from bgp_dn42 {
-	neighbor fe80::1%dn42_mneme as 76112;
+	neighbor 2a01:4f8:200:71e3:5054:ff:feff:cbce as 76112;
 }
 
 protocol bgp bgp_dn42_nbsp_router from bgp_dn42 {
