bird6: restrict dn42 export to ula,self,freifunk

--- a/bird6.conf
+++ b/bird6.conf
@@ -153,7 +153,7 @@ template bgp bgp_dn42 {
   table peering;
   local as OWNAS;
   import where is_ula() && !is_self_net();
-  export where !is_default();
+  export where is_ula() || is_self_net() || is_freifunk();
 }
 
 # Include local configuration
