--- a/huextertor/bird6_local.conf
+++ b/huextertor/bird6_local.conf
@@ -2,5 +2,5 @@
 #############
 
 protocol bgp ffhh_wende0 from bgp_public {
-        neighbor 2a03:2267:b:1::1 as 49009;
+        neighbor 2a03:2267:ffff:b01::1 as 49009;
 }
