--- a/bird.conf
+++ b/bird.conf
@@ -160,7 +160,7 @@ template bgp bgp_icvpn {
 	table peering;
 	local as OWNAS;
 	import where (is_freifunk() || is_dn42() || is_chaosvpn()) && !is_self_net();
-	export all;
+	export where (is_freifunk() || is_dn42());
 };
 
 # ffrheinland ipv4
